연습문제 카테고리 추가

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,3 +22,6 @@ sidebar-category:
 
       - title : "Javascript"
         url   : "/Category_Javascript"
+
+      - title : "Javascript"
+        url   : "/Category_Javascript_Practice"
