add network_http category

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,3 +25,6 @@ sidebar-category:
 
       - title : "Javascript_Practice"
         url   : "/Category_Javascript_Practice"
+      
+      - title : "http"
+        url   : "/Category_http"
