--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,5 +26,5 @@ sidebar-category:
       - title : "Javascript_Practice"
         url   : "/Category_Javascript_Practice"
       
-      - title : "http"
-        url   : "/Category_http"
+      - title : "network"
+        url   : "/Category_network"
